test to fix iphone horizontal scroll bug

--- a/handaschedule/static/css/stylesheet.css
+++ b/handaschedule/static/css/stylesheet.css
@@ -9,6 +9,8 @@ body {
 
 #wrap {
     min-height: 100%;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 #main {
